# networks

./: .gitignore  04_network_analysis.html  04_network_analysis.md  README.md  abgabe_blatt_3_kalchschmid_wenzler.html  abgabe_blatt_3_kalchschmid_wenzler.html.md  abgabe_blatt_3_kalchschmid_wenzler.py  abgabe_blatt__9_wenzler_kalchschmid.py  core.html  core.html.md  exercise3.py  index.html  index.html.md  mainfile.py  matrix.py  matrix_ops.py  network_analysis.html  network_analysis.html.md  network_analysis_exercise_03.html  network_analysis_exercise_03.html.md  notebook.ipynb  plotsine.html  plotsine.html.md  plotsinus.py  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  svd_compression.py  trisolve.py  trisolve_backup.py
EiPy/: _modidx.py
_proc/: index.ipynb
_proc/_docs/: robots.txt
data/: As3G2.txt
my_numpy_extensions/: __init__.py  aufgabe_4_blatt_5_wenzler_kalchschmid.py  kegelschnitt.py
nbs/: 00_core.ipynb  01_plotsine.ipynb  03_abgabe_blatt_3_kalchschmid_wenzler.ipynb  04_network_analysis.ipynb  05_network_analysis.ipynb  05_network_analysis_exercise_03.ipynb  abgabe_blatt_3_kalchschmid_wenzler.ipynb  abgabe_blatt__9_wenzler_kalchschmid.py  export_pdf_preamble.txt  index.ipynb  linsys_conditioning.py  mainfile.py  matrix_ops.py  myname.py  nbdev.yml  network analysis.ipynb  newton_method.py  sheet7.py  sidebar.yml  svd_compression.py  trisolve.py
networks/: _modidx.py  abgabe03.py  core.py  networkanalysis.py  networks03.py  plotsine.py
