[tool.poetry]
name = "numerics"
version = "0.1.0"
description = ""
authors = ["flupppi <felix.kalchschmid@uni-konstanz.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
