[tool.poetry]
name="EiPy"
version = "0.1.0"
description = ""
authors = ["flupppi <felix.kalchschmid@uni-konstanz.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
jinja2 = "^3.1.4"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
